--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "cs255_proj1",
   "version": "1.0.0",
-  "description": "",
   "main": "password-manager.js",
   "scripts": {
     "test": "mocha"
@@ -12,5 +11,10 @@
     "expect.js": "^0.3.1",
     "mocha": "^9.1.4",
     "package.json": "^2.0.1"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {},
+  "description": ""
 }
